--- a/estudantes.html
+++ b/estudantes.html
@@ -32,30 +32,30 @@
     <section class="estudantes">
         <div class="row">
             <div class="student">
-                <img src="student1.jpg" alt="Estudante 1">
-                <div class="student-name">Nome do Estudante 1</div>
+                <img src="adrielli.png" alt="Estudante 1">
+                <div class="student-name">adrielli</div>
             </div>
             <div class="student">
-                <img src="student2.jpg" alt="Estudante 2">
-                <div class="student-name">Nome do Estudante 2</div>
+                <img src="maria.jpg" alt="Estudante 2">
+                <div class="student-name">maria</div>
             </div>
             <div class="student">
-                <img src="student3.jpg" alt="Estudante 3">
-                <div class="student-name">Nome do Estudante 3</div>
+                <img src="mikael.jpg" alt="Estudante 3">
+                <div class="student-name">Mikael</div>
             </div>
         </div>
         <div class="row">
             <div class="student">
-                <img src="student4.jpg" alt="Estudante 4">
-                <div class="student-name">Nome do Estudante 4</div>
+                <img src="Miguel.jpg" alt="Estudante 4">
+                <div class="student-name">Miguel</div>
             </div>
             <div class="student">
                 <img src="jose.jpg" alt="Estudante 5">
                 <div class="student-name">José</div>
             </div>
             <div class="student">
-                <img src="student6.jpg" alt="Estudante 6">
-                <div class="student-name">Nome do Estudante 6</div>
+                <img src="jhuan.jpg" alt="Estudante 6">
+                <div class="student-name">jhuan</div>
             </div>
         </div>
     </section>
