--- a/escola.html
+++ b/escola.html
@@ -75,7 +75,11 @@
             }
         }
 
-
+        function toggleSobre() {
+            var textoSobre = document.getElementById('texto-sobre');
+            textoSobre.classList.toggle('show');
+        }
+    </script>
     
     <footer>
         <p>© 2023 Hellbotica. Todos os direitos reservados.</p>
