--- a/projetos.html
+++ b/projetos.html
@@ -64,4 +64,18 @@
 </body>
 </html>
 
-aaaaa
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Animação de Foto</title>
+</head>
+<body>
+    <div class="imagem-container">
+        <img src="super maquina.jpg" alt="Super máquina">
+    </div>
+</body>
+</html>
+
