--- a/escola.html
+++ b/escola.html
@@ -29,7 +29,39 @@
         </div>
     </header>
    
-   
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <!-- Metatags e links para estilos e fontes -->
+    </head>
+    <body>
+        <header class="cabecalho">
+            <!-- Cabeçalho do site -->
+        </header>
+        <section class="escola">
+            <div class="escola-div-conteudo">
+                <h2><button class="btn-sobre" onclick="toggleSobre()">Sobre Nosso Colégio</button></h2>
+                <p class="escola-texto-um" id="texto-sobre">O Colégio Estadual Unidade Polo – Ensino Fundamental e Médio está localizado na Avenida Engenheiro Beltrão, Nº 1005, zona leste da cidade de Ibiporã, município do Estado do Paraná.</p>
+                <p class="escola-texto-dois" id="texto-historia">Para a construção do colégio, a prefeitura desapropriou uma área de 19.480 M2 de propriedade do Senhor Antonio Zanoni. Na época, foram construídos três blocos. O primeiro, com 10 salas e uma sala ambiente para biblioteca, o segundo destinado à ala administrativa, com banheiros para uso discente, e o terceiro com salas ambientes como: Oficina Industrial, Laboratório de Ciências, Educação para o Lar, Educação Artística. Todos os blocos com proteção e cobertura.</p>
+            </div>
+            <section class="mapa">
+                <!-- Mapa incorporado -->
+            </section>
+        </section>
+        <section class="História">
+            <!-- História do colégio -->
+            <p>O Colégio Estadual Unidade Polo – Ensino Fundamental e Médio está localizado na Avenida Engenheiro Beltrão, Nº 1005, zona leste da cidade de Ibiporã, município do Estado do Paraná.</p>
+            <p>Para a construção do colégio, a prefeitura desapropriou uma área de 19.480 M2 de propriedade do Senhor Antonio Zanoni. Na época, foram construídos três blocos. O primeiro, com 10 salas e uma sala ambiente para biblioteca, o segundo destinado à ala administrativa, com banheiros para uso discente, e o terceiro com salas ambientes como: Oficina Industrial, Laboratório de Ciências, Educação para o Lar, Educação Artística. Todos os blocos com proteção e cobertura.</p>
+        </section>
+    
+        <script src="script.js"></script>
+        <!-- Scripts JavaScript -->
+        <footer>
+            <!-- Rodapé -->
+        </footer>
+    </body>
+    </html>
+    
     <script>
         function toggleMenu() {
             var menu = document.getElementById('menu');
