--- a/escola.html
+++ b/escola.html
@@ -38,7 +38,13 @@
             <p class="escola-texto-dois" id="texto-historia">Para a construção do colégio, a prefeitura desapropriou uma área de 19.480 M2 de propriedade do Senhor Antonio Zanoni. Na época, foram construídos três blocos. O primeiro, com 10 salas e uma sala ambiente para biblioteca, o segundo destinado à ala administrativa, com banheiros para uso discente, e o terceiro com salas ambientes como: Oficina Industrial, Laboratório de Ciências, Educação para o Lar, Educação Artística. Todos os blocos com proteção e cobertura.</p>
         </div>
         <section class="mapa">
-            <!-- Mapa incorporado -->
+            <!-- Mapa do Google Maps incorporado -->
+            <iframe
+                width="600"
+                height="450"
+                frameborder="0" style="border:0"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.67890!2d-51.0484°!3d-23.2731°!4m3!3m2!1s0x0:0x0!4b1!3m1!1s0x0:0x0" allowfullscreen>
+            </iframe>
         </section>
     </section>
     
