--- a/escola.html
+++ b/escola.html
@@ -43,17 +43,12 @@
                 width="600"
                 height="450"
                 frameborder="0" style="border:0"
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.67890!2d-51.0484°!3d-23.2731°!4m3!3m2!1s0x0:0x0!4b1!3m1!1s0x0:0x0" allowfullscreen>
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12345.67890!2d-51.0484!3d-23.2731!4m3!3m2!1s0x0:0x0!4b1!3m1!1s0x0:0x0" allowfullscreen>
             </iframe>
         </section>
     </section>
     
-    <section class="História">
-        <!-- História do colégio -->
-        <p>O Colégio Estadual Unidade Polo – Ensino Fundamental e Médio está localizado na Avenida Engenheiro Beltrão, Nº 1005, zona leste da cidade de Ibiporã, município do Estado do Paraná.</p>
-        <p>Para a construção do colégio, a prefeitura desapropriou uma área de 19.480 M2 de propriedade do Senhor Antonio Zanoni. Na época, foram construídos três blocos. O primeiro, com 10 salas e uma sala ambiente para biblioteca, o segundo destinado à ala administrativa, com banheiros para uso discente, e o terceiro com salas ambientes como: Oficina Industrial, Laboratório de Ciências, Educação para o Lar, Educação Artística. Todos os blocos com proteção e cobertura.</p>
-    </section>
-
+  
     <footer>
         <p>© 2023 Hellbotica. Todos os direitos reservados.</p>
     </footer>
