--- a/estudantes.html
+++ b/estudantes.html
@@ -1,79 +1,44 @@
+@@ -1,20 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Hellbotica - Seu Colégio de Confiança">
-    <meta name="keywords" content="Hellbotica, colégio, educação">
-    <meta name="author" content="Seu Nome">
-   
-    <link rel="stylesheet" href="style.css">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-   
-    <title>Hellbotica</title>
+  <title>Estudantes do Grupo</title>
+  <link rel="stylesheet" type="text/css" href="estudantes style.css">
 </head>
 <body>
-    <header class="cabecalho">
-        <img class="cabecalho-imagem" src="hellbotica2.gif" alt="Hellbotica">
-       
-        <button class="cabecalho-lista-toggle" onclick="toggleMenu()">&#9776;</button>
-       
-        <div class="menu" id="menu">
-            <a class="cabecalho-lista-item" href="escola.html">Escola</a>
-            <a class="cabecalho-lista-item" href="projetos.html">Projetos</a>
-            <a class="cabecalho-lista-item" href="estudantes.html">Estudantes</a>
-        </div>
-    </header>
-   
-    <section class="estudantes">
-        <div class="row">
-            <div class="student">
-                <img src="adrielli.png" alt="Estudante 1">
-                <div class="student-name">adrielli</div>
-            </div>
-            <div class="student">
-                <img src="maria.jpg" alt="Estudante 2">
-                <div class="student-name">maria</div>
-            </div>
-            <div class="student">
-                <img src="mikael.jpg" alt="Estudante 3">
-                <div class="student-name">Mikael</div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="student">
-                <img src="Miguel.jpg" alt="Estudante 4">
-                <div class="student-name">Miguel</div>
-            </div>
-            <div class="student">
-                <img src="jose.jpg" alt="Estudante 5">
-                <div class="student-name">José</div>
-            </div>
-            <div class="student">
-                <img src="jhuan.jpg" alt="Estudante 6">
-                <div class="student-name">jhuan</div>
-            </div>
-        </div>
-    </section>
-   
-    <script>
-        function toggleMenu() {
-            var menu = document.getElementById('menu');
-            if (menu.style.display === 'block') {
-                menu.style.display = 'none';
-            } else {
-                menu.style.display = 'block';
-            }
-        }
-    </script>
-   
-    <footer>
-        <p>© 2023 Hellbotica. Todos os direitos reservados.</p>
-    </footer>
+  <h1>Estudantes do Grupo</h1>
+
+  <div class="student">
+    <img src="adrielli.png" alt="Estudante 1">
+    <div>Adrielli</div>
+  </div>
+
+  <div class="student">
+    <img src="maria.jpg" alt="Estudante 2">
+    <div>Maria Isabelly</div>
+  </div>
+
+  <div class="student">
+    <img src="mikael.jpeg" alt="Estudante 3">
+    <div>Mikael</div>
+  </div>
+  <div class="student">
+    <img src="jhuan.jpg" alt="Estudante 4">
+    <div>Jhuan</div>
+  </div>
+  <div class="student">
+    <img src="jose.jpg" alt="Estudante 5">
+    <div>José</div>
+  </div>
+
+  <div class="student">
+    <img src="Miguel.png" alt="Estudante 1">
+    </div>
+    <div></div>
+  </div>
+  <div class="buttons">
+    <a href="projetos.html">Projetos</a>
+    <a href="escola.html">Escola</a>
+  </div>
 </body>
 </html>
-
