--- a/escola.html
+++ b/escola.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="hellbotica2.gif" alt="Logo da Escola">
+        <img src="hellbotica2.gif">
         Escola
         <div id="menu-icon">&#9776;</div>
         <nav id="menu">
@@ -21,30 +21,16 @@
     </header>
     <div id="sobre-nossa-escola">
         <h1>SOBRE NOSSA ESCOLA</h1>
+        <p>
+            O Colégio Estadual Unidade Polo – Ensino Fundamental e Médio está localizado na Avenida Engenheiro Beltrão, Nº 1005, zona leste da cidade de Ibiporã, município do Estado do Paraná.
+        </p>
         <div id="mapa">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.420224368977!2d-51.040772424679!3d-23.26417577900522!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb47ca7de7359d%3A0xd9c73ad5f8b13943!2sUnidade%20Polo%2C%20C%20E-Ef%20M%20P!5e0!3m2!1spt-BR!2sbr!4v1697626604630!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3665.420224368977!2d-51.040772424679!3d-23.26417577900522!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94eb47ca7de7359d%3A0xd9c73ad5f8b13943!2sUnidade%20Polo%2C%20C%20E-Ef%20M%20P!5e0!3m2!1spt-BR!2sbr!4v1697627282624!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 
-    <script>
-        const menuIcon = document.getElementById('menu-icon');
-        const menu = document.getElementById('menu');
-
-        menuIcon.addEventListener('click', () => {
-            if (menu.style.display === 'none' || menu.style.display === '') {
-                menu.style.display = 'block';
-            } else {
-                menu.style.display = 'none';
-            }
-        });
-
-        // Esconda o menu quando a janela for redimensionada para uma versão maior
-        window.addEventListener('resize', () => {
-            if (window.innerWidth > 768) {
-                menu.style.display = 'none';
-            }
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
+
 
