--- a/escola.html
+++ b/escola.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Escola</title>
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="escola style.css">
 </head>
 <body>
     <header>
@@ -12,11 +12,9 @@
         Escola
         <div id="menu-icon">&#9776;</div>
         <nav id="menu">
-            <a href="#">Página Inicial</a>
-            <a href="#">Estudante</a>
-            <a href="#">Projetos</a>
-            <a href="#">Principal</a>
-            <a href="#">Contato</a>
+            <a href="escola.html">Estudante</a>
+            <a href="projetos.html">Projetos</a>
+            <a href="index.html">Principal</a>
         </nav>
     </header>
     <div id="sobre-nossa-escola">
