--- a/projetos.html
+++ b/projetos.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Página dos Projetos</title>
@@ -25,12 +25,12 @@
     <div class="grid-item">
       <img src="S botão.jpg" alt="Semáforo com botão">
       <h2>Semáforo com botão</h2>
-      <p>...</p>
+      <p>O semáfaro com botão funciona com a seguinte questão, você aperta o botão e ele logo em seguida desliga uma led e liga a outra do pedestre</p>
     </div>
     <div class="grid-item">
       <img src="super maquina.jpg" alt="Super máquina">
       <h2>Super Máquina</h2>
-      <p>....</p>
+      <p>O super máquina é onde um leitor de led fica com configurações passando as leds de um lado para o outro</p>
     </div>
   </div>
 
@@ -49,6 +49,12 @@
 
   <footer>
     <p>&copy; 2023 HellBótica Projetos</p>
+    
+    <!-- Botões para as páginas dos estudantes e da escola -->
+    <div>
+      <a href="estudantes.html"><button>Ir para a Página dos Estudantes</button></a>
+      <a href="escola.html"><button>Ir para a Página da Escola</button></a>
+    </div>
   </footer>
 
   <script>
@@ -64,18 +70,7 @@
 </body>
 </html>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Animação de Foto</title>
-</head>
-<body>
-    <div class="imagem-container">
-        <img src="super maquina.jpg" alt="Super máquina">
-    </div>
-</body>
-</html>
+
+
+
 
