--- a/projetos.html
+++ b/projetos.html
@@ -38,19 +38,24 @@
     <div class="grid-item">
       <img src="Botão.jpg" alt="Botão e Led">
       <h2>Led com Botão</h2>
-      <p>Led que acende com o botão.....</p>
+      <p>Led que acende com o botão após ele ser acionado.</p>
     </div>
     <div class="grid-item">
       <img src="buzzer.png" alt="Buzzer">
       <h2>Buzzer</h2>
-      <p>Buzzer que emite um som, com as notas musicais</p>
+      <p>Buzzer que emite um som, com as notas musicais, ou com sinfonias conforme as notas musicais</p>
     </div>
+  </div>
+  <div class="grid-item">
+    <img src="teste.jpg" alt="Buzzer">
+    <h2>TESTE </h2>
+    <p>TESTE PARA ADICIONAR OUTRA IMAGEM</p>
+  </div>
   </div>
 
   <footer>
     <p>&copy; 2023 HellBótica Projetos</p>
     
-    <!-- Botões para as páginas dos estudantes e da escola -->
     <div>
       <a href="estudantes.html"><button>Ir para a Página dos Estudantes</button></a>
       <a href="escola.html"><button>Ir para a Página da Escola</button></a>
