--- a/projetos.html
+++ b/projetos.html
@@ -13,8 +13,9 @@
 </head>
 <body>
   <header>
-    <h1>HellBótica Projetos</h1>
+    <h1 class="page-title">HellBótica Projetos</h1>
   </header>
+  
 
   <div class="grid-container">
     <div class="grid-item">
