--- a/projetos.html
+++ b/projetos.html
@@ -21,7 +21,7 @@
     <div class="grid-item">
       <img src="Semáfaro.jpg" alt="Foto do Integrante 1 - Semáforo simples">
       <h2>Semáforo simples</h2>
-      <p>Semáforo de rua com uso de Arduino, LEDs e resistores...</p>
+      <p>Semáforo de rua com uso de Arduino, LEDs e resistores, fizemos logo na primeira aula, onde aprendemos como funciona a questão do arduino os resistores e leds e logo em seguida fizemos este projeto.</p>
     </div>
     <div class="grid-item">
       <img src="S botão.jpg" alt="Semáforo com botão">
@@ -39,7 +39,7 @@
     <div class="grid-item">
       <img src="Botão.jpg" alt="Botão e Led">
       <h2>Led com Botão</h2>
-      <p>Led que acende com o botão após ele ser acionado.</p>
+      <p>Led que acende com o botão após ele ser acionado, este foi um protótipo que é como a evolução do semafáro padrão que funciona com um botão.</p>
     </div>
     <div class="grid-item">
       <img src="buzzer.png" alt="Buzzer">
