--- a/projetos.html
+++ b/projetos.html
@@ -48,7 +48,7 @@
     </div>
   </div>
   <div class="grid-item">
-    <img src="teste.jpg" alt="Buzzer">
+    <img src="Teste.jpg" alt="Buzzer">
     <h2>TESTE </h2>
     <p>TESTE PARA ADICIONAR OUTRA IMAGEM</p>
   </div>
