--- a/estudantes.html
+++ b/estudantes.html
@@ -6,21 +6,21 @@
   <link rel="stylesheet" type="text/css" href="estudantes style.css">
 </head>
 <body>
-  <h1>Estudantes do Grupo</h1>
+  <h1 class="page-title">Estudantes do Grupo</h1>
+
 
   <div class="student">
     <img src="adrielli.png" alt="Estudante 1">
-    <div>Adrielli</div>
-  </div>
-
+    <div class="student-name">Adrielli</div>
+  </div> 
   <div class="student">
     <img src="maria.jpg" alt="Estudante 2">
-    <div>Maria Isabelly</div>
+    <div class="student-name">Maria Isabelly</div>
   </div>
 
   <div class="student">
     <img src="mikael.jpeg" alt="Estudante 3">
-    <div>Mikael</div>
+    <div class="student-name">Mikael</div>
   </div>
   <div class="student">
     <img src="jhuan.jpg" alt="Estudante 4">
