--- a/projetos.html
+++ b/projetos.html
@@ -31,7 +31,7 @@
     <div class="grid-item">
       <img src="super maquina.jpg" alt="Super máquina">
       <h2>Super Máquina</h2>
-      <p>O super máquina é onde um leitor de led fica com configurações passando as leds de um lado para o outro</p>
+      <p>O super máquina é onde um leitor de led fica com configurações passando as leds de um lado para o outro,fizemos este projeto na aula, onde a intenção era fazer com que as leds passassem de um lado ao outro ou que ficasse paradas.</p>
     </div>
   </div>
 
