--- a/projetos.html
+++ b/projetos.html
@@ -44,7 +44,7 @@
     <div class="grid-item">
       <img src="buzzer.png" alt="Buzzer">
       <h2>Buzzer</h2>
-      <p>Buzzer que emite um som, com as notas musicais, ou com sinfonias conforme as notas musicais</p>
+      <p>Buzzer que emite um som, com as notas musicais, ou com sinfonias conforme as notas musicais, montamos o projeto, e usamos a musica do hino do Brasil e do star wars</p>
     </div>
   </div>
   <div class="grid-item">
