--- a/estudantes.html
+++ b/estudantes.html
@@ -37,8 +37,8 @@
     <div></div>
   </div>
   <div class="buttons">
-    <a href="projetos.html">Projetos</a>
-    <a href="escola.html">Escola</a>
+    <a href="projetos.html">Projetos do Grupo</a>
+    <a href="escola.html">Escola Unidade Polo</a>
   </div>
 </body>
 </html>
