--- a/estudantes.html
+++ b/estudantes.html
@@ -34,11 +34,11 @@
   <div class="student">
     <img src="Miguel.png" alt="Estudante 1">
     </div>
-    <div></div>
+    <div>Miguel</div>
   </div>
   <div class="buttons">
-    <a href="projetos.html">Projetos do Grupo</a>
-    <a href="escola.html">Escola Unidade Polo</a>
+    <a href="projetos.html">Projetos</a>
+    <a href="escola.html">Escola</a>
   </div>
 </body>
 </html>
