--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
             <h2><button>
                 Sobre Nosso Grupo
             </button></h2>
-            <p class="escola-texto-um">O grupo foi criado com a intenção de desenvolvermos um nova geração com uma visão mais ampla do futuro tecnologico. 
+                <p class="escola-texto-um">O grupo foi criado com a intenção de desenvolvermos um nova geração com uma visão mais ampla do futuro tecnologico. 
                 Através das aulas de programação e robótica do novo ensino médio estamos realizando projetos que serão postados com a intenção de incentivar a nova geração.</p>
-            <p class="escola-texto-dois">Aqui mostraremos nossos projetos em robótica,como por exemplo semáfaro feito com leds,arduino,etc.</p>
+            <p class="escola-texto-dois">Aqui mostraremos nossos projetos em robótica,como por exemplo semáfaro feito com leds,arduino, ou seja projetos desenvolvidos durante os 3 trimestre do colégio Unidade Polo( onde temos uma página explicando sobre a escola), 
+
+            </p>
         </div>
         <img class="escola-imagem" src="Meu projeto.png" alt="Imagem para representar o robo da hellbotica">
     </section>
