--- a/projetos.html
+++ b/projetos.html
@@ -60,6 +60,7 @@
     <div>
       <a href="estudantes.html"><button>Ir para a Página dos Estudantes</button></a>
       <a href="escola.html"><button>Ir para a Página da Escola</button></a>
+      <a href="index.html"><button>Ir para a Página Principal</button></a>
     </div>
   </footer>
 
