--- a/projetofinal.html
+++ b/projetofinal.html
@@ -4,20 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nova Página</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <body>
-        <h1>Projeto final-José</h1>
-        <p>página projeto final</p>
-        <img src="imagem.jpg" alt="Minha imagem">
-        <a href="outrapagina.html">Visite outra página</a>
-    </body>
-    <div class="menu" id="menu">
-        <a class="cabecalho-lista-item" href="escola.html">Escola</a>
-        <a class="cabecalho-lista-item" href="projetos.html">Projetos</a>
-        <a class="cabecalho-lista-item" href="estudantes.html">Estudantes</a>
-        <a class="cabecalho-lista-item" href="novapagina.html">Nova Página</a>
+    <div class="center-title">
+        <h1>Projeto Final</h1>
     </div>
-    
 </body>
 </html>
