--- a/projetofinal.html
+++ b/projetofinal.html
@@ -3,12 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nova Página</title>
-    <link rel="stylesheet" type="text/css" href="styles.css">
+    <title>Minha Página HTML</title>
 </head>
 <body>
-    <div class="center-title">
-        <h1>Projeto Final</h1>
-    </div>
+    <h1>Projeto Final</h1>
+    <p>Este é um parágrafo de texto na minha página HTML.</p>
+    <p>Outro parágrafo de texto.</p>
 </body>
 </html>
