--- a/escola.html
+++ b/escola.html
@@ -12,8 +12,8 @@
         Escola
         <div id="menu-icon">&#9776;</div>
         <nav id="menu">
-            <a href="projetos.html">Outra Página 1</a> 
-            <a href="estudantes.html">Outra Página 2</a>
+            <a href="projetos.html"> projetos </a> 
+            <a href="estudantes.html"> estudantes </a>
         </nav>
     </header>
     <div id="sobre-nossa-escola">
