--- a/projetofinal.html
+++ b/projetofinal.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha Página HTML</title>
+    <style>
+        body {
+            background-color: rgb(103, 199, 231); /* Altere para a cor que desejar */
+        }
+    </style>
 </head>
 <body>
     <h1>Projeto Final</h1>
