--- a/escola.html
+++ b/escola.html
@@ -12,8 +12,11 @@
         Escola
         <div id="menu-icon">&#9776;</div>
         <nav id="menu">
-            <a href="projetos.html"> projetos </a> 
-            <a href="estudantes.html"> estudantes </a>
+
+                <a href="projetos.html">Projetos do Grupo</a>
+                <a href="estudantes.html">Estudantes Unidade Polo</a>
+                <a href="index.html">Principal</a>
+            
         </nav>
     </header>
     <div id="sobre-nossa-escola">
