--- a/projetofinal.html
+++ b/projetofinal.html
@@ -18,16 +18,20 @@
         p {
             border: 1px dashed blue; /* Exemplo de borda tracejada azul de 1 pixel ao redor do parágrafo */
             padding: 5px; /* Espaçamento interno para afastar o conteúdo da borda */
+            transition: color 0.3s; /* Adiciona uma transição de cor durante 0.3 segundos */
+        }
+
+        p:hover {
+            color: rgb(0, 4, 255); /* Altera a cor do texto para vermelho ao passar o mouse sobre o parágrafo */
         }
     </style>
 </head>
 <body>
     <h1>Pagina Final</h1>
-    <p>Texto da página final.</p>
+    <p>A melhor maneira de aprender, seja o que for, é fazendo..</p>
 
     <!-- Adicione a linha abaixo para incluir uma imagem -->
     <img src="caminho/para/sua/imagem.jpg" alt="Descrição da imagem">
 
 </body>
 </html>
-
